@@ -54,6 +54,8 @@ private slots:
     void test_renderToEvents_velocityJitterSet_shouldApplyVelocityJitter();
     void test_renderToEvents_customNoteOffOffsetSet_shouldApplyCorrectOffset();
 
+    void test_addTrack_shouldUseSmallestFreeId();
+
     void test_trackByName_shouldReturnTrack();
     void test_columnByName_shouldReturnColumn();
 };
