@@ -15,6 +15,8 @@ Bug fixes:
 
 Other:
 
+* Take the lowest free track index when adding a new track
+
 0.14.1
 ======
 
